# Chakra47-AgenticSwarm

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  battlecard_microsoft_com_20260502_210848.json  battlecard_zomato_com_20260502_210356.json  battlecard_zomato_com_20260502_213224.json  pyproject.toml  rules.yaml
community_agents/: CONTRIBUTING.md
community_agents/battlecard/: __init__.py  _http.py  cli.py  rules.yaml  runner.py
community_agents/battlecard/agents/: __init__.py  battlecard_composer.py  career_signals.py  client_evidence.py  company_profile.py  google_reviews.py  hn_signals.py  page_discovery.py  pricing_extractor.py  query_planner.py  reddit_signals.py  review_aggregator.py  social_presence.py  tech_stack.py  web_search.py
community_agents/log_classifier/: __init__.py  agent.py
community_agents/sensor_fusion/: __init__.py  sensor_fusion_agent.py
community_agents/template/: agent_template.py
supabase/: schema.sql
swarm_core/: __init__.py  __main__.py  base.py  cli.py  config.py  orchestrator.py  utils.py
swarm_core/agents/: __init__.py  anomaly_detector.py  comms_agent.py  context_analyst.py  mission_planner.py  override_handler.py  path_planner.py  resource_monitor.py  risk_agent.py  rule_validator.py
swarm_core/audit/: audit_agent.py  chain.py
swarm_core/perception/: __init__.py  ingester.py
swarm_core/rules/: __init__.py  engine.py  llm_bridge.py
tests/: conftest.py  test_agents.py  test_audit.py  test_base.py  test_cli.py  test_config.py  test_orchestrator.py  test_perception.py  test_rules.py
tests/test_community_agents/: test_log_classifier.py  test_sensor_fusion.py
tests/test_community_agents/test_battlecard/: test_agents.py
