[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chakra47-agentic-swarm"
version = "0.1.0"
description = "Governed, code-first multi-agent framework — Code Decides. LLM Advises."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[project.scripts]
swarm = "swarm_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["swarm_core", "community_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=swarm_core --cov-report=term-missing --cov-fail-under=80"
